// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Legacy Portable Stories API > Renders CSF2Secondary story 1`] = `
<body>
  <div>
    <button
      class="storybook-button storybook-button--medium storybook-button--secondary"
      type="button"
    >
      Children coming from story args!
    </button>
  </div>
</body>
`;

exports[`Legacy Portable Stories API > Renders CSF2StoryWithParamsAndDecorator story 1`] = `
<body>
  <div>
    <button
      class="storybook-button storybook-button--medium storybook-button--secondary"
      type="button"
    >
      foo
    </button>
  </div>
</body>
`;

exports[`Legacy Portable Stories API > Renders CSF3Button story 1`] = `
<body>
  <div>
    <button
      class="storybook-button storybook-button--medium storybook-button--secondary"
      type="button"
    >
      foo
    </button>
  </div>
</body>
`;

exports[`Legacy Portable Stories API > Renders CSF3ButtonWithRender story 1`] = `
<body>
  <div>
    <div>
      <p
        data-testid="custom-render"
      >
        I am a custom render function
      </p>
      <button
        class="storybook-button storybook-button--medium storybook-button--secondary"
        type="button"
      >
        foo
      </button>
    </div>
  </div>
</body>
`;

exports[`Legacy Portable Stories API > Renders CSF3InputFieldFilled story 1`] = `
<body>
  <div>
    <input
      data-testid="input"
    />
  </div>
</body>
`;

exports[`Legacy Portable Stories API > Renders CSF3Primary story 1`] = `
<body>
  <div>
    <button
      class="storybook-button storybook-button--large storybook-button--primary"
      type="button"
    >
      foo
    </button>
  </div>
</body>
`;

exports[`Legacy Portable Stories API > Renders LoaderStory story 1`] = `
<body>
  <div>
    <div>
      <div
        data-testid="loaded-data"
      >
        loaded data
      </div>
      <div
        data-testid="spy-data"
      >
        mockFn return value
      </div>
    </div>
  </div>
</body>
`;

exports[`Legacy Portable Stories API > Renders WithActionArg story 1`] = `
<body>
  <div>
    <button />
  </div>
</body>
`;

exports[`Legacy Portable Stories API > Renders WithActionArgType story 1`] = `
<body>
  <div>
    <div>
      nothing
    </div>
  </div>
</body>
`;
